# Architectum

./: README.md  main.py  pyproject.toml  setup.py
arch_blueprint_generator/: README.md  __init__.py  cli.py  logging_config.py
arch_project_docs/: architecture_doc.md  epic_1.md  epic_2.md  epic_3.md  epic_4.md  product_requirements_document.md  project_brief.md  testing_strategy.md
architectum-agents/: AGENT.md  README-agents.md  ide-architectum-orchestrator-cfg.md  ide-architectum-orchestrator.md  project_init.js  project_init.py  web-architectum-orchestrator-agent-cfg.md  web-architectum-orchestrator-agent.md
bmad_method/: arch_prd.md  epic_2  epic_3  initial-archetect-prompt.md
docs/: architecture.md  cli-guide.md  epic-1.md  epic-3.md  index.md  prd.md  project-brief.md  story-1.2-directory-scan.md
instructions/: architectum-json-technical-overview.md  instructions.md  plan.yaml  project_overview.md  sample_component.xml  sample_plan.yaml  tech_onepager.md  technical_overview.md  xml_schema.xml  xml_schema_explaination.md
placeholder/: architectum-config-qa.md  architectum-config.md  architectum-hybrid.md  architectum-overview.md  architectum-project-overview.md  architectum-tech-onepager.md  lsp-integration.md  project-overview-prompt.md  schema-explanation.md
project_docs/: index.md  project_checklist.yaml
scripts/: arch_diff_index.py  arch_extract.py  build_xml_indexes.py  extract_flutter.py  extract_kotlin.py  extract_python.py  extract_typescript.js
structure/: detailed_example_ts.txt  minimal_example_ts.jsonc  standard_example_ts.jsonc
(+49 files in other folders)
