[project]
name = "architectum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "colorama>=0.4.6",
    "fastapi>=0.115.12",
    "hypothesis>=6.135.1",
    "networkx>=3.5",
    "pact>=1.12.0",
    "pytest-cov>=6.1.1",
    "pyyaml>=6.0.2",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.34.3",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "structlog>=25.4.0",
]
